     > The Baselard and Tuck are not fully implemented and should thus not be obtainable at all
  - Hopefully fixed a bug where the Yawarakai Te and its derivatives gave the wrong flux cost when no missiles were in range
  - Yawarakai Te and its derivatives now correctly identify and ignores flares when using IPDAI



Version 0.4.1c
 Bugfixes:
  - Fixed bug causing hard-crash due to incorrect rules.csv fields
  - Fixed bug causing hard-crash when accessing the new Arms Dealer variation on an old savefile



Version 0.4.1b
 Additions:
  - Added a new variation on the Arms Dealer event, which favors expensive equipment and allows you to procure otherwise-restricted Vass equipment
 
 Changes:
  - Vass ships and fighters can no longer be purchased from normal Arms Dealer events
     > See the event above for the new mechanic
  - Minor adjustments to Vass fleet interception, should be somewhat more reliable now
  - Vass relations are no longer synced to commission if playing with Nexerelin
  - Various minor improvements have been made to some campaign interactions, mainly in the text-styling department

 Bugfixes:
  - Fixed unknown bug caused by the Chrono Jump system moving a BALLISTIC_AS_BEAM projectile entity which is not a DamagingProjectileAPI entity
     > Yes, that should be an oxymoron. No, I haven't been able to find what weapon causes this.
  - Minor typo fixes in fleet events



Version 0.4.1a
 Changes:
  - Slightly altered Curtana codex text
     > The previous description referenced no-longer-existant ship design features
  - Updated a few ship variants to better match intended roles and be up-to-date with hullmod changes

 Bugfixes:
  - Fixed major bug causing initial Vass mission fleet to regularly miss the player and despawn, often without being noticed
     > Oops.
  - Fixed Tizona typo (thanks TameFroggy!)
  - Fixed Schiavona typo
  - Fixed the Yawarakai Te and Juuchi Yosamu not correctly applying certain damage increases